make sure the page looks good on mobile and desktop.#3

--- a/css/layout.css
+++ b/css/layout.css
@@ -38,10 +38,8 @@ button{
 }
 .scores-header{
   text-align: center;
-  color: white;
 }
 .score-box-1{
-  background-color: white;
   width: 45%;
   margin: 2rem auto;
   text-align: center;
@@ -50,7 +48,6 @@ ul > li{
   display: inline-block;
 }
 .schedule-box{
-  background-color: white;
   width: 55%;
   margin: 2rem auto;
 }
@@ -73,5 +70,13 @@ ul > li{
   }
   .score-box-1{
     width: 90%;
+  }
+  .schedule-box{
+    width: 90%;
+  }
+  ul > li{
+    position: relative;
+    right: 2rem;
+    bottom: 1rem;
   }
 }
